--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -4,6 +4,7 @@
   <!-- Executive summary:
        * to build the VS2015 visx, build from the VS2015 command prompt/from inside VS2015.
        * to build the VS2017 visx, build from the VS2017 command prompt/from inside VS2017.
+       * to build the VS2019 visx, build from the VS2019 command prompt/from inside VS2019.
 
        Background:
        We want to be able to use the same set of projects to develop in multiple versions of VS (currently VS2015
@@ -30,19 +31,21 @@
     <!-- Hack to prevent VS2017 from automatically attempting to upgrade the project -->
     <MinimumVisualStudioVersion Condition="$(DevEnvDir.Contains('2015'))">14.0</MinimumVisualStudioVersion>
     <MinimumVisualStudioVersion Condition="$(DevEnvDir.Contains('2017'))">15.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion Condition="$(DevEnvDir.Contains('2019'))">16.0</MinimumVisualStudioVersion>
 
     <VersionSpecificSuffix>UNKNOWN_VS_VERSION</VersionSpecificSuffix>
     <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='14.0'">2015</VersionSpecificSuffix>
     <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='15.0'">2017</VersionSpecificSuffix>
+    <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='16.0'">2019</VersionSpecificSuffix>
   </PropertyGroup>
   <ItemGroup>
     <None Condition="$(VisualStudioVersion)=='14.0'" Include="Manifests\VS2015\source.extension.vsixmanifest" />
     <None Condition="$(VisualStudioVersion)=='15.0'" Include="Manifests\VS2017\source.extension.vsixmanifest" />
+    <None Condition="$(VisualStudioVersion)=='16.0'" Include="Manifests\VS2019\source.extension.vsixmanifest" />
   </ItemGroup>
 
   <PropertyGroup>
-    <MinimumVisualStudioVersion Condition="$(VisualStudioVersion)=='14.0'">14.0</MinimumVisualStudioVersion>
-    <MinimumVisualStudioVersion Condition="$(VisualStudioVersion)=='15.0'">15.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>$(VisualStudioVersion)</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <TargetFrameworkProfile />
   </PropertyGroup>
