--- a/src/SonarLint.VSSpecificAssemblies.props
+++ b/src/SonarLint.VSSpecificAssemblies.props
@@ -71,6 +71,17 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup Label="TeamFoundation16" Condition="$(RequiresTeamFoundation)=='true' AND $(VisualStudioVersion)=='16.0'">
+    <Reference Include="Microsoft.TeamFoundation.Client, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Client.dll</HintPath>
+      <Private>$(CopyVSAssembliesToOutput)</Private>
+    </Reference>
+    <Reference Include="Microsoft.TeamFoundation.Controls, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Controls.dll</HintPath>
+      <Private>$(CopyVSAssembliesToOutput)</Private>
+    </Reference>
+  </ItemGroup>
+
   <!-- ******************************************************************************* -->
 
 </Project>
