--- a/src/Integration.TeamExplorer/Integration.TeamExplorer.csproj
+++ b/src/Integration.TeamExplorer/Integration.TeamExplorer.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup>
     <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='14.0'">2015</VersionSpecificSuffix>
     <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='15.0'">2017</VersionSpecificSuffix>
+    <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='16.0'">2019</VersionSpecificSuffix>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -161,7 +162,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
